--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -4,6 +4,9 @@
     <title>Spring Security Example</title>
 </head>
 <body>
+<br>
+<a href="/logout">Выйти</a>
+<br><br>
 <h1>User, welcome spring boot security page!</h1>
 
 
