--- a/src/main/resources/templates/index-info.html
+++ b/src/main/resources/templates/index-info.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<html lang="ru">
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <meta charset="UTF-8">
@@ -18,13 +17,17 @@
 <form th:action="@{/admin}" th:object="${userAdd}" method="post">
     <input type="hidden" id="userId" th:field="*{id}">
     <div class="form-group">
-    <label for="name">Name:</label>
-    <input type="text" id="name" th:field="*{name}" name="name" required>
+        <label for="name">Name:</label>
+        <input type="text" id="name" th:field="*{name}" name="name" required>
     </div>
-        <div class="form-group">
-    <label for="email">LastName:</label>
-    <input type="text" id="lastName" th:field="*{lastName}" name="lastName">
-        </div>
+    <div class="form-group">
+        <label for="age">age:</label>
+        <input type="number" id="age" th:field="*{age}" name="age">
+    </div>
+    <div class="form-group">
+        <label for="lastName">LastName:</label>
+        <input type="text" id="lastName" th:field="*{lastName}" name="lastName">
+    </div>
   <div class="form-group">
     <label for="email">Email:</label>
     <input type="email" id="email" th:field="*{email}" name="email">
@@ -32,6 +35,10 @@
     <div class="form-group">
         <label for="password">Password:</label>
         <input type="text" id="password" th:field="*{password}" name="password">
+    </div>
+    <div class="form-group">
+        <label for="roleIds">Role:</label>
+        <input type="text" id="roleIds" th:field="*{roleIds}" name="roleIds">
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
