--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>Spring Security Example</title>
+    <title>Пример</title>
 </head>
 <body>
 <br>
-<a href="/logout">Выйти</a>
+<a href="/logout" class="btn btn-warning"><b>Выход</b> (<span th:text="${username}"></span>) </a>
+
 <br><br>
-<h1>User, welcome spring boot security page!</h1>
+<h1>Добро пожаловать!</h1>
 
 
 </body>
