make admin panel

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body>
+<body class="container">
 <h1>Добро пожаловать к нам!</h1>
 <a href="/user" class="btn btn-info" role="button">В личный кабинет</a>
 </body>
