fix button delete

--- a/src/main/resources/templates/index-info.html
+++ b/src/main/resources/templates/index-info.html
@@ -85,7 +85,7 @@
                 <option value="2">ADMIN</option>
             </select>
         </div>
-        <a th:href="@{'/admin/delete?userId=' + ${userDel.id}}" class="btn btn-danger mx-3 del_b w-100">Delete</a>
+        <a th:href="@{'/admin/delete?userId=' + ${userDel.id}}" class="btn btn-danger del_b w-100">Delete</a>
     </form>
 </div>
 </body>
